--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<modules>
 		<module>attemper-samples-spring-boot</module>
+		<module>attemper-samples-spring</module>
 	</modules>
 	<packaging>pom</packaging>
 
@@ -17,6 +18,7 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 
+		<spring.version>5.1.7.RELEASE</spring.version>
 		<spring.boot.version>2.1.5.RELEASE</spring.boot.version>
 		<spring.cloud.version>Greenwich.SR1</spring.cloud.version>
 
