add jar samples

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<modules>
 		<module>attemper-samples-spring-boot</module>
 		<module>attemper-samples-spring</module>
+		<module>attemper-samples-jar</module>
 	</modules>
 	<packaging>pom</packaging>
 
