--- a/attemper-samples-spring/src/main/resources/config.properties
+++ b/attemper-samples-spring/src/main/resources/config.properties
@@ -1,3 +1,5 @@
-dispatch.user-name=interior
-dispatch.password=LR6sWNFAPIfZgYIUX+u9fY4qsNlQR0H4QqPEuyLRBm8=
+dispatch.executor.service-name=attemper-executor
 dispatch.web.service-urls=http://127.0.0.1:5210
+dispatch.web.service-name=attemper-web
+dispatch.user-name=sample
+dispatch.password=7ZXF+IWQUpHhG93taoynzM6izTDS8Rc1zm2JwaMeM9E=
