--- a/attemper-samples-spring/src/main/webapp/WEB-INF/web.xml
+++ b/attemper-samples-spring/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 		      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          id="WebApp_ID" version="3.0">
 
-    <display-name>attemper-interior</display-name>
+    <display-name>attemper-sample</display-name>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
