--- a/attemper-samples-spring/pom.xml
+++ b/attemper-samples-spring/pom.xml
@@ -15,13 +15,8 @@
     <dependencies>
         <dependency>
             <groupId>com.github.attemper</groupId>
-            <artifactId>attemper-java-sdk-rest-executor</artifactId>
-            <version>${sdk.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.attemper</groupId>
-            <artifactId>attemper-java-sdk-rest-web</artifactId>
-            <version>${sdk.version}</version>
+            <artifactId>attemper-samples-task</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
