--- a/attemper-samples-spring/src/main/resources/log4j.properties
+++ b/attemper-samples-spring/src/main/resources/log4j.properties
@@ -1,6 +1,8 @@
 log4j.rootLogger = DEBUG,STDOUT
 
-log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
-log4j.appender.STDOUT.Target=System.out
+log4j.logger.com.github.attemper.samples.spring=DEBUG
+log4j.logger.org.springframework=ERROR
 
+log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
+log4j.appender.STDOUT.layout.ConversionPattern = [%p] [%-d{yyyy-MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
