--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<modules>
 		<module>attemper-samples-spring-boot</module>
 		<module>attemper-samples-spring</module>
-        <module>attemper-samples-jar</module>
-	</modules>
+        <module>attemper-samples-task</module>
+    </modules>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -19,22 +19,17 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 
-		<spring.version>5.1.7.RELEASE</spring.version>
-		<spring.boot.version>2.1.5.RELEASE</spring.boot.version>
-		<spring.cloud.version>Greenwich.SR1</spring.cloud.version>
+		<spring.version>5.2.2.RELEASE</spring.version>
+		<spring.boot.version>2.2.2.RELEASE</spring.boot.version>
+		<spring.cloud.version>Greenwich.SR4</spring.cloud.version>
 
-		<sdk.version>0.9.5</sdk.version>
+		<sdk.version>1.0.0</sdk.version>
 
-		<groovy.version>2.4.15</groovy.version>
-
-		<os.plugin.version>1.5.0.Final</os.plugin.version>
-		<protobuf.plugin.version>0.5.0</protobuf.plugin.version>
-		<protoc.version>3.5.1</protoc.version>
 		<maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 		<lombok.maven.plugin.version>1.16.18.0</lombok.maven.plugin.version>
 		<!-- docker -->
-		<dockerfile.maven.plugin.version>1.4.10</dockerfile.maven.plugin.version>
+		<dockerfile.maven.plugin.version>1.4.13</dockerfile.maven.plugin.version>
 	</properties>
 
 	<dependencyManagement>
@@ -54,11 +49,6 @@
 				<version>${spring.cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.codehaus.groovy</groupId>
-				<artifactId>groovy-all</artifactId>
-				<version>${groovy.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
