--- a/attemper-samples-spring/pom.xml
+++ b/attemper-samples-spring/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.attemper</groupId>
         <artifactId>attemper-samples</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -54,25 +54,6 @@
         </dependency>
     </dependencies>
     <build>
-        <plugins>
-            <!-- web.xml is missing and <failOnMissingWebXml> is set to true -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
+        <finalName>${project.artifactId}</finalName>
     </build>
 </project>
