--- a/attemper-samples-spring-boot/pom.xml
+++ b/attemper-samples-spring-boot/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.attemper</groupId>
         <artifactId>attemper-samples</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -104,6 +104,11 @@
                         <version>${commons.codec.version}</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven.jar.plugin.version}</version>
             </plugin>
         </plugins>
     </build>
